<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="old_pwd">当前密码</string>
    <string name="new_pwd">新 密 码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="input_old_pwd">请输入旧密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_confirm_pwd">请再次输入密码</string>
    <string name="confirm">确定</string>
 	<string name="clear">清空</string>
 	<string name="feedback">反馈</string>
 	<string name="cancel">取消</string>
 	<string name="feedback_content">反馈内容:</string>
 	<string name="feedback_content_tip">欢迎留下您宝贵的墨迹！</string>
 	<string name="key_manage">钥匙管理</string>
 	<string name="open_record">开门记录</string>
 	<string name="call_set">通话设置</string>
 	<string name="settings">设置</string>
 	<string name="phone_number">手机号码</string>
 	<string name="nickname">昵称</string>
 	<string name="sex">性别</string>
 	<string name="birthday">出生年月</string>
 	<string name="region">地区</string>
 	<string name="account">账号：</string>
 	<string name="cardholder">持卡人：</string>
 	<string name="cardnumber">卡  号：</string>
 	
</resources>
