<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    	<TextView 
    	    android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:layout_gravity="center_vertical"
    		android:text="@string/old_pwd"
    		android:textSize="@dimen/textSize1"/>
        <EditText
            android:id="@+id/et_old_pwd" 
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="3"
    		android:layout_gravity="center_vertical"
    		android:hint="@string/input_old_pwd"
    		android:textSize="@dimen/textSize1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:layout_marginTop="@dimen/interval1">
    	<TextView 
    	    android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:layout_gravity="center_vertical"
    		android:text="@string/old_pwd"
    		android:textSize="@dimen/textSize1"/>
        <EditText
            android:id="@+id/et_new_pwd"  
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="3"
    		android:layout_gravity="center_vertical"
    		android:hint="@string/input_new_pwd"
    		android:textSize="@dimen/textSize1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:layout_marginTop="@dimen/interval1">
    	<TextView 
    	    android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:layout_gravity="center_vertical"
    		android:text="@string/confirm_pwd"
    		android:textSize="@dimen/textSize1"/>
        <EditText
            android:id="@+id/et_confirm_pwd"  
            android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="3"
    		android:layout_gravity="center_vertical"
    		android:hint="@string/input_confirm_pwd"
    		android:textSize="@dimen/textSize1"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" 
    	android:layout_marginTop="@dimen/interval1"
    	android:gravity="center_horizontal">
    	<Button
    	    android:id="@+id/bt_confirm"   
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/confirm"
    		android:textSize="@dimen/textSize1"/>
       <Button
    	    android:id="@+id/bt_clear"
    	    android:layout_marginLeft="@dimen/interval1"   
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/clear"
    		android:textSize="@dimen/textSize1"/>
    </LinearLayout>

</LinearLayout>
