<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/feedback_content"
    	android:textSize="@dimen/textSize1"/>
    
     <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="5"
    	android:gravity="top"
    	android:padding="@dimen/interval2"
    	android:hint="@string/feedback_content_tip"
    	android:textSize="@dimen/textSize1"/>

     <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_weight="1"
    	android:orientation="horizontal" 
    	android:layout_marginTop="55dp"
    	android:gravity="center_horizontal">
    	<Button
    	    android:id="@+id/bt_cancel"   
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/cancel"
    		android:textSize="@dimen/textSize1"/>
       <Button
    	    android:id="@+id/bt_feedback"
    	    android:layout_marginLeft="@dimen/interval1"   
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/feedback"
    		android:textSize="@dimen/textSize1"/>
    </LinearLayout>
     
</LinearLayout>
