<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/interval2">
    
    <ImageView
   	    android:id="@+id/iv_snap" 
   	    android:layout_width="@dimen/interval3"
   		android:layout_height="@dimen/interval3"
   		android:src="@drawable/ic_launcher"/>

    <LinearLayout
        android:layout_toRightOf="@id/iv_snap"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="@dimen/interval2"
        android:orientation="vertical">
        
        <LinearLayout
            android:id="@+id/ll_1" 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	        android:orientation="horizontal">
        	<TextView 
    		    android:id="@+id/tv_region"
    		    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="121312"
    			android:textSize="@dimen/textSize1"
    			android:textColor="@android:color/black"
    			android:singleLine="true"/>
            <TextView 
    		    android:id="@+id/tv_terminal"
    		    android:layout_marginLeft="@dimen/interval5"
    		    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="121312"
    			android:textSize="@dimen/textSize1"
    			android:textColor="@android:color/black"
    			android:singleLine="true"/>
    	</LinearLayout>
    	
    	<LinearLayout
    	    android:id="@+id/ll_2"  
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="@dimen/interval2"
	        android:visibility="gone">
        	<TextView 
    		    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/account"
    			android:textSize="@dimen/textSize2"/>
            <TextView 
    		    android:id="@+id/tv_account"
    		    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="@dimen/textSize2"
    			android:text="1234567890"/>
            <ImageView
		   	    android:id="@+id/iv_type" 
		   	    android:layout_width="@dimen/interval1"
		   		android:layout_height="@dimen/interval1"
		   		android:src="@drawable/ic_launcher"/>
            <TextView 
    		    android:id="@+id/tv_date"
    		    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="@dimen/textSize2"
    			android:text="1234567890"/>
   		 </LinearLayout>
   		 
		<LinearLayout
		    android:id="@+id/ll_3"  
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginTop="@dimen/interval2"
	        android:gravity="center_vertical">
        	<RelativeLayout
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content">
        		<LinearLayout
        		    android:id="@+id/ll"
			        android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			        android:orientation="horizontal">
			        <TextView 
		    		    android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:text="@string/cardholder"
		    			android:textSize="@dimen/textSize2"/>
		            <TextView 
		    		    android:id="@+id/tv_cardholder"
		    		    android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:textSize="@dimen/textSize2"
		    			android:text="1234567890"/>
	        	</LinearLayout>
	        	<LinearLayout
			        android:layout_width="wrap_content"
			    	android:layout_height="wrap_content"
			        android:orientation="horizontal"
			        android:layout_below="@id/ll">
			        <TextView 
		    		    android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:text="@string/cardnumber"
		    			android:textSize="@dimen/textSize2"/>
		            <TextView 
		    		    android:id="@+id/tv_cardnumber"
		    		    android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:textSize="@dimen/textSize2"
		    			android:text="1234567890"/>
	        	</LinearLayout>
   		 	</RelativeLayout>
		    
        	<ImageView
		   	    android:id="@+id/iv_type_2" 
		   	    android:layout_width="@dimen/interval1"
		   		android:layout_height="@dimen/interval1"
		   		android:src="@drawable/ic_launcher"/>
            <TextView 
    		    android:id="@+id/tv_date_2"
    		    android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:textSize="@dimen/textSize2"
    			android:text="1234567890"/>
        	
   		</LinearLayout>
    	
    </LinearLayout>  
    
</RelativeLayout>
